--- a/DailyMood/app/src/main/res/values/strings.xml
+++ b/DailyMood/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="delete_success">删除成功！</string>
     <string name="edit_card">编辑心情卡片</string>
     <string name="modify_success">修改成功！</string>
-    <string name="click_date">点击日期查看</string>
+    <string name="item_hint">点击日期查看，点击选中卡片左滑可编辑/删除</string>
     <string name="existed_data">已有数据</string>
     <string name="on">开</string>
     <string name="off">关</string>
